add preload div

--- a/coxld/all/1.0.0/css/20220709.css
+++ b/coxld/all/1.0.0/css/20220709.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Gowun+Dodum&family=Nanum+Gothic:wght@400;700;800&family=Signika+Negative:wght@300;400;500;600;700&display=swap');
 
+/* !!!!!!!!!!!!! IMPORTANT !!!!!!!!!!!!!!!!!!!!! */
+
+.c-x-help {
+  width: 1px;
+  height: 1px;
+  position: fixed;
+  top: 100%;
+}
+
+.c-x-help:before {
+  content: '0';
+  font-size: 1px;
+  font-weight: 100;
+}
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
 /*
 
 font-family: 'Catamaran', sans-serif;
